# ha-schellenberg-usb

./: .devcontainer.json  README.md  nuxt.config.ts  pnpm-lock.yaml  pyproject.toml  repository.yaml  settings.json  settings_old.yaml
app/: app.config.ts
app/assets/css/: main.css
app/components/: ConnectedDevices.vue
app/composables/: useIngressPath.ts
app/stores/: devices.ts
schellenberg-usb-hack/: Dockerfile  MQTT.md  README.md  apparmor.txt  build.yaml  config.yaml
schellenberg-usb-hack/rootfs/etc/nginx/: nginx.conf
schellenberg-usb-hack/rootfs/etc/s6-overlay/s6-rc.d/backend/: finish  run
schellenberg-usb-hack/rootfs/etc/s6-overlay/s6-rc.d/frontend/: finish  run
schellenberg-usb-hack/rootfs/etc/s6-overlay/s6-rc.d/nginx/: finish  run
schellenberg-usb-hack/rootfs/etc/schellenberghack_api/: settings.json
schellenberg-usb-hack/schellenberg-nuxt/: nuxt.config.ts  package.json
schellenberg-usb-hack/schellenberg-nuxt/.devcontainer/: devcontainer.json
schellenberg-usb-hack/schellenberg-nuxt/app/: app.vue
schellenberg-usb-hack/schellenberg-nuxt/app/components/: AppLogo.vue  ConfirmableInput.vue  PairModal.vue  SenderDevice.vue
schellenberg-usb-hack/schellenberg-nuxt/app/composables/: useIngressPath.ts
schellenberg-usb-hack/schellenberg-nuxt/app/pages/: [...slug].vue
schellenberg-usb-hack/schellenberghack_api/src/schellenberghack_api/: homeassistant.py  main.py  worker.py
server/api/: [...].ts  ingress-path.ts
src/schellenberghack_api/: homeassistant.py  main.py  worker.py
